removed medals-table-container' height ' of the ' medals-table-container ' from css to fix a problem with overlapping the table on the footer

--- a/wp-content/plugins/medal-map/assets/css/medal-map.css
+++ b/wp-content/plugins/medal-map/assets/css/medal-map.css
@@ -380,7 +380,6 @@
 }
 
 .medals-table-container {
-    height: 30vh;
     background: transparent;
     padding-top: 20px;
     box-sizing: border-box;
